# litepubsub

./: .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  Justfile  README.md
litepubsub/: Cargo.toml
litepubsub-capnp/: Cargo.toml
litepubsub-core/: Cargo.toml
litepubsub-core/src/: configuration.rs  lib.rs  server.rs
litepubsub-tarpc/: Cargo.toml
litepubsub-tarpc/src/: publisher.rs  subscriber.rs
litepubsub/src/: error.rs  lib.rs  pubsub.rs  service.rs  tarpc.rs
src/: main.rs
