[package]
name = "litepubsub"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
tokio-macros = "2.3.0"
futures = "0.3.30"
tarpc = { version = "0.34.0", features = ["serde-transport-bincode", "tcp", "tokio1", "serde-transport"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
opentelemetry = { version = "0.21.0", default-features = false }
opentelemetry-jaeger = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry_sdk = "0.21.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = { version = "0.22.0", default-features = false }
