[package]
name = "litepubsub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-rwlock = "1.3.0"
futures = "0.3.30"
serde = { version = "1.0.194", features = ["derive"] }
tarpc = { version = "0.34.0", features = ["tcp", "serde-transport-bincode", "unix", "tokio1"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
